Increase default font size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5861,6 +5861,10 @@ div.image-bg h3 {
   .site-wrapper-inner {
     vertical-align: middle;
   }
+
+  p {
+    font-size: 16px;
+  }
 }
 @media (min-width: 992px) {
   .masthead,
