--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5787,8 +5787,7 @@ body {
 }
 
 .image-bg {
-  background: webkit-linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("/assets/images/FarmersMarket.jpg");
-  background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("/assets/images/FarmersMarket.jpg");
+  background-image: url("/assets/images/FarmersMarket.jpg");
   background-repeat:no-repeat;
   background-position:center;
   background-size: cover;
