--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2312,10 +2312,12 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-lg,
 .btn-group-lg > .btn {
-  padding: 10px 16px;
-  font-size: 18px;
+  padding: 6px 16px;
+  font-size: 16px;
   line-height: 1.33;
   border-radius: 6px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .btn-sm,
 .btn-group-sm > .btn {
