Fixed Image Height
Made main background image bigger

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5793,6 +5793,7 @@ body {
   background-repeat:no-repeat;
   background-position:center;
   position: relative;
+  height: 650px;
   top: 40px;
 }
 
