--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5801,7 +5801,7 @@ body {
   background-repeat:no-repeat;
   background-position:center;
   position: relative;
-  height: 682px;
+  height: 90%;
   top: 40px;
 }
 
