--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5918,9 +5918,9 @@ th.dynatable-head a {
 }
 .connect {
   display: inline-block;
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
+  position: relative;
+  top: 3.2em;
+  left: 35em;
 }
 @media screen and (max-width: 992px) {
   .masthead-nav {
@@ -5934,5 +5934,4 @@ th.dynatable-head a {
     left: -15px;
     margin-left: 15px;
     margin-right: 15px;
-
 }
